--- a/fire_app/pubspec.yaml
+++ b/fire_app/pubspec.yaml
@@ -36,13 +36,14 @@ dependencies:
   flutter_svg: ^2.0.17
   google_fonts: ^6.2.1
   intl: ^0.19.0
+  location: ^5.0.3
+  mapbox_maps_flutter: ^2.8.0
+  permission_handler: ^11.3.0
   provider: ^6.1.4
   salomon_bottom_bar: ^3.3.2
   shared_preferences: ^2.5.3
-  url_launcher: ^6.2.5
   socket_io_client: ^2.0.1
-  location: ^5.0.3
-  permission_handler: ^11.3.0
+  url_launcher: ^6.2.5
 
 dev_dependencies:
   flutter_lints: ^4.0.0
